--- a/plugin.xml
+++ b/plugin.xml
@@ -42,7 +42,7 @@ THE SOFTWARE.
     <platform name="android">
         <framework src="com.android.support:support-annotations:+" />
 
-        <config-file target="res/xml/config.xml" parent="/*">
+        <config-file target="app/src/main/res/xml/config.xml" parent="/*">
             <feature name="DateTimePicker" >
                 <param name="android-package" value="com.skwas.cordova.datetimepicker.DateTimePicker"/>
             </feature>
